# Emacs-configuration

./: .dir-locals.el  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.org  aliases.el  buildout.cfg  ca-init-new.el  ca-init-newpackage.el  ca-init.el  communication.el  compile.sh  conf.el  conf.org  custom.el  default.el  early-init.el  ejc.el  emacs_abstract.org  fix.py  functions.el  hacks.el  ligat.el  miniconf.el  miniconf.org  misc.el  orgloader.el  showup.org  slides.org  speech.org  test.org  test.sh  treemacs.el  update.sh
auctex/: ChangeLog  Makefile  auto-loads.el  config.status  font-latex.el  latex.el  tex-site.el  tex-site.el.out  tex.el
auctex/CVS/: Entries
auctex/doc/: Makefile  auctex.info  auctex.info-1  auctex.info-2  preview-latex.info  version.texi
auctex/preview/: Makefile  config.status
auto-install/: anything-ack.el  anything-config.el  anything-match-plugin.el  anything.el  auto-complete-octave.el  batch-mode.el  bazaar.el  bibsnarf.el  cmd-mode.el  dot-mode.el  iedit.el  irfc.el  nsis-mode.el  project-buffer-mode.el  replace+.el  ruby-test.el  show-wspace.el  visual-basic-mode.el  w32-browser.el  xml-rpc.el
autopair/: autopair.el
cedet/: INSTALL  Makefile
cedet/cogre/: Makefile  cogre-loaddefs.el  wisent-dot-wy.el
cedet/common/: Makefile  Project.ede  cedet-java.el  cedet-loaddefs.el  cedet.el  cedet.texi
cedet/contrib/: Makefile  contrib-loaddefs.el  wisent-csharp-wy.el  wisent-php-wy.el  wisent-ruby-wy.el
cedet/ede/: Makefile  Project.ede  autoconf-edit.el  ede-android.el  ede-cpp-root.el  ede-emacs.el  ede-files.el  ede-linux.el  ede-loaddefs.el  ede.el  ede.texi
cedet/eieio/: Makefile  eieio-loaddefs.el  eieio-opt.el  eieio.el
cedet/semantic/: Makefile  Project.ede  semantic-analyze-refs.el  semantic-complete.el  semantic-elp.el  semantic-fw.el  semantic-grammar-wy.el  semantic-grammar.el  semantic-ia-utest.el  semantic-idle.el  semantic-lex-spp.el  semantic-loaddefs.el  semantic-m3.el  semanticdb.el  (+5 more)
cmake_mode/: cmake-ext.el
conf/: auctex  cedet  ecb  elib  jao-compile.el  jao?p=emacs.git  jdee  my-snippets  vm  vm-8.1.1.tgz  yasnippet
conf/vm-8.1.1/: CHANGES  INSTALL  Makefile  Makefile.in  NEWS  README  TODO  config.status  configure  configure.ac  example.vm  vm-load.el  vm-load.el.in
conf/vm-8.1.1/contrib/: attempted-locking.diff  org-vm.el  vm-blueman.el  vm-mime-display-internal-application.el  vm-mime.el-w3m.patch
conf/vm-8.1.1/info/: Makefile  Makefile.in  version.texinfo  vm-pcrisis.info  vm-pcrisis.texinfo  vm.info  vm.texinfo
conf/vm-8.1.1/lisp/: Makefile  Makefile.in  autoloads.py  tapestry.el  u-vm-color.el  vcard.el  vm-autoload.el  vm-autoloads.el  vm-avirtual.el  vm-biff.el  vm-build.el  vm-crypto.el  vm-cus-load.el  vm-delete.el  vm-digest.el  vm-edit.el  vm-folder.el  vm-grepmail.el  vm-imap.el  vm-license.el  vm-macro.el  vm-mark.el  vm-menu.el  vm-message-history.el  vm-message.el  vm-mime.el  vm-minibuf.el  vm-misc.el  vm-motion.el  vm-mouse.el  vm-page.el  vm-pcrisis.el  vm-pgg.el  vm-pine.el  vm-pop.el  vm-ps-print.el  vm-reply.el  vm-rfaddons.el  vm-save.el  vm-search.el  (+17 more)
conf/vm-8.1.1/pixmaps/: Makefile  Makefile.in  autofile-dn.xpm  autofile-up.xpm  compose-dn.xpm  compose-up.xpm  delete-dn.xpm  delete-up.xpm  file-dn.xpm  file-up.xpm  followup-dn.xpm  followup-up.xpm  forward-dn.xpm  forward-up.xpm  getmail-dn.xpm  getmail-up.xpm  help-dn.xpm  help-up.xpm  make-gtk-pixmaps.py  mime-dn.xpm  mime-up.xpm  mime-xx.xpm  next-dn.xpm  next-up.xpm  previous-dn.xpm  previous-up.xpm  print-dn.xpm  print-up.xpm  quit-dn.xpm  quit-up.xpm  recover-dn.xpm  recover-up.xpm  reply-dn.xpm  reply-up.xpm  undelete-dn.xpm  undelete-up.xpm  visit-dn.xpm  visit-up.xpm
conf/vm-8.1.1/pixmaps/gtk/: autofile-dn.xpm  autofile-up.xpm  compose-dn.xpm  compose-up.xpm  delete-dn.xpm  delete-up.xpm  file-dn.xpm  file-up.xpm  followup-dn.xpm  followup-up.xpm  forward-dn.xpm  forward-up.xpm  getmail-dn.xpm  getmail-up.xpm  help-dn.xpm  help-up.xpm  mime-dn.xpm  mime-up.xpm  mime-xx.xpm  next-dn.xpm  next-up.xpm  previous-dn.xpm  previous-up.xpm  print-dn.xpm  print-up.xpm  quit-dn.xpm  quit-up.xpm  recover-dn.xpm  recover-up.xpm  reply-dn.xpm  reply-up.xpm  undelete-dn.xpm  undelete-up.xpm  visit-dn.xpm  visit-up.xpm
conf/vm-8.1.1/pixmaps/mime/: application.xpm  audio.xpm  image.xpm  message.xpm  multipart.xpm  text.xpm  video.xpm
conf/vm-8.1.1/src/: Makefile  Makefile.in  base64-decode  base64-decode.c  base64-encode  base64-encode.c  qp-decode  qp-decode.c  qp-encode  qp-encode.c  vm-mail
ess-5.11/: NEWS
lisp/: aliases.el  ca-ai.el  ca-all.el  ca-clojure.el  ca-devops.el  ca-git.el  ca-js.el  ca-mobile.el  ca-project.el  ca-python.el  ca-research.el  ca-shell.el  ca-sql.el  ca-straight.el  ca-treesit.el  ca-web.el  ca-writing.el  functions.el  hacks.el  misc.el  os.el
modules/: ca-aliases.el  ca-anything.el  ca-auto-complete.el  ca-bookmarks.el  ca-buffers.el  ca-c.el  ca-cedet.el  ca-clojure.el  ca-company-mode.el  ca-customs.el  ca-desktop.el  ca-devops.el  ca-dired.el  ca-elixir.el  ca-elm.el  ca-environment.el  ca-erc.el  ca-faces.el  ca-flymake.el  ca-flyspell.el  ca-fonts.el  ca-frames.el  ca-functions.el  ca-git-gutter.el  ca-global-settings.el  ca-go.el  ca-haskell.el  ca-helm-swoop.el  ca-helm.el  ca-hide.el  ca-highlight.el  ca-init.el  ca-java.el  ca-javascript.el  ca-keys.el  ca-latex.el  ca-lisp.el  ca-mac.el  ca-magit-p4.el  ca-mail.el  (+33 more)
nosemacs/: .hgtags
prob_1/: prob_1.hs  prob_1.py
prob_2/: prob_2.hs  prob_2.py
python-mode/: .bzrignore  NEWS  README  py-bug-numbered-tests.el  python-mode-test.el  python-mode-tests.sh  python-mode.el  test-triple-strings.py
ruby-mode/: ruby-mode.el
site-lisp/: camelCase-mode.el  command-frequency.el  cpp-omnet.el  diction.el  haskell-complete.el  ido-hacks.el  log4j-mode.el  ned-mode.el  p4.el  pan.el  po-compat.el  po-mode.el  profile-dotemacs.el  promela-mode.el  rdebug.el  smart-compile.el  translate.el  turbogears.el  undo-tree.el
tuareg-mode/: tuareg.el
tuareg-mode-1.45.7/: HISTORY  camldebug.el  sym-lock.el  tuareg.el
(+956 files in other folders)
